Fix contrast on sidebar links

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -95,5 +95,10 @@
     font-size: .8rem;
     position : absolute;
     bottom   : 0;
+
+    a {
+      color: rgba(255, 255, 255, 0.6); 
+    }
   }
+
 }
